--- a/episode-5.html
+++ b/episode-5.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
@@ -32,7 +34,7 @@
       </div>
         <div class="commentary">
             <p> 
-                The Lighthouse thrives on its stark 
+                <em>The Lighthouse</em> thrives on its stark 
                 black-and-white cinematography, which 
                 creates a claustrophobic, timeless 
                 atmosphere. The harsh lighting and 
