--- a/tv-glow.html
+++ b/tv-glow.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
@@ -36,7 +38,7 @@
         <div class="commentary">
          <p> 
                 In this episode, we dive into the eerie, otherworldly 
-                world of I Saw the TV Glow. We'll break down the chilling 
+                world of <em>I Saw the TV Glow.</em> We'll break down the chilling 
                 plot twists, dissect the psychological tension, 
                 and explore how the film masterfully builds fear 
                 with its unique pacing. But we're not stopping there.
