--- a/episode-1.html
+++ b/episode-1.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+    
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
@@ -34,7 +37,7 @@
         <div class="commentary">
             <p> 
                 In this episode, we dive into the eerie, otherworldly 
-                The cinematography of The VVitch is bleak and oppressive,
+                The cinematography of <em>The VVitch</em> is bleak and oppressive,
                  using natural lighting and muted tones to evoke 
                  the isolation and fear of 17th-century Puritan life. Special 
                  effects are minimal yet highly effective, especially the subtle 
