--- a/episode-2.html
+++ b/episode-2.html
@@ -10,8 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
-        <nav>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
             <ul class="topnav">
                 <li>
                     <a href="index.html">Home</a>
@@ -32,7 +33,7 @@
       </div>
         <div class="commentary">
             <p> 
-                Pearl stands out with its vibrant, almost dreamlike 
+                <em>Pearl</em> stands out with its vibrant, almost dreamlike 
                 technicolor visuals, which sharply contrast the dark 
                 psychological underpinnings of the film. 
                 The cinematography mirrors classic Hollywood, with 
