--- a/episode-3.html
+++ b/episode-3.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
@@ -32,7 +34,7 @@
       </div>
         <div class="commentary">
             <p> 
-                The Craft shines with its portrayal 
+                <em>The Craft</em> shines with its portrayal 
                 of teenage angst through a distinct 90s 
                 aesthetic—dark, moody lighting, grunge-
                 inspired wardrobe, and memorable special 
