--- a/episode-4.html
+++ b/episode-4.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
@@ -32,7 +34,7 @@
       </div>
         <div class="commentary">
             <p> 
-                The cinematography in Oldboy is masterful, 
+                The cinematography in <em>Oldboy</em> is masterful, 
                 with meticulous framing and lighting that 
                 enhance the story’s brutal intensity. 
                 The iconic hallway fight scene, captured 
