--- a/episodes.html
+++ b/episodes.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <div class="logo"> <img src="Images/skull-txt-logo.png" width="400" > </div>
+        <div class="logo"> 
+            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+        </div>
         <nav>
             <ul class="topnav">
                 <li>
