--- a/tv-glow.html
+++ b/tv-glow.html
@@ -58,9 +58,10 @@
 <iframe width="760" height="515" src="https://www.youtube.com/embed/dktOtHt_NsI?si=n4W4YtsussiGcuAY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </main>
-    <footer>
-
-    </footer>
+  
+        <footer>
+            <p>&copy; 2024 Fright Flicks. All rights reserved.</p>
+        </footer>
     
 </body>
 </html>
