--- a/episode-4.html
+++ b/episode-4.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Episode 4</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <header>
         <div class="logo"> 
-            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+            <a href="index.html"><img src="images/skull-txt-logo.png" width="400"> </a>
         </div>
         <nav>
             <ul class="topnav">
@@ -51,9 +51,10 @@
     <iframe width="760" height="515" src="https://www.youtube.com/embed/L0j-KfLJ9Qw?si=ew8_I5HfdJnGJqvR" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </main>
-    <footer>
 
-    </footer>
-    
+<footer>
+    <p>&copy; 2024 Fright Flicks. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
