--- a/episodes.html
+++ b/episodes.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Episodes</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <header>
         <div class="logo"> 
-            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+            <a href="index.html"><img src="images/skull-txt-logo.png" width="400"> </a>
         </div>
         <nav>
             <ul class="topnav">
@@ -25,17 +25,18 @@
     </header>
     <main>
         <div class="thumbnails">
- <a href="episode-1.html"><img src="Images/vvitch.jpg" alt="Main character looking up while praying" width="430"></a>
- <a href="episode-2.html"><img src="Images/pearl.jpg" alt="Main character holding an axe outside, looking down in shushing pose" width="430"></a>
- <a href="episode-3.html"><img src="Images/the-craft.jpg" alt="Character in confusion" width="430"></a>
- <a href="episode-4.html"><img src="Images/oldboy.jpg" alt="Two characters looking dead inside a convinience store" width="430"></a>
- <a href="episode-5.html"><img src="Images/lighthouse.jpg" alt="Main character staring in dispair in front of a lighthouse" width="430"></a>
-<a href="tv-glow.html"><img src="Images/tv-glow.jpg" alt="Characters sitting down one is in shock and the other one is confused" width="430"></a>
+ <a href="episode-1.html"><img src="images/vvitch.jpg" alt="Main character looking up while praying" width="430"></a>
+ <a href="episode-2.html"><img src="images/pearl.jpg" alt="Main character holding an axe outside, looking down in shushing pose" width="430"></a>
+ <a href="episode-3.html"><img src="images/the-craft.jpg" alt="Character in confusion" width="430"></a>
+ <a href="episode-4.html"><img src="images/oldboy.jpg" alt="Two characters looking dead inside a convinience store" width="430"></a>
+ <a href="episode-5.html"><img src="images/lighthouse.jpg" alt="Main character staring in dispair in front of a lighthouse" width="430"></a>
+<a href="tv-glow.html"><img src="images/tv-glow.jpg" alt="Characters sitting down one is in shock and the other one is confused" width="430"></a>
         </div>
 </main>
-    <footer>
-
-    </footer>
+   
+        <footer>
+            <p>&copy; 2024 Fright Flicks. All rights reserved.</p>
+        </footer>
     
 </body>
 </html>
