--- a/tv-glow.html
+++ b/tv-glow.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fright Flicks</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <header>
         <div class="logo"> 
-            <a href="index.html"><img src="Images/skull-txt-logo.png" width="400"> </a>
+            <a href="index.html"><img src="images/skull-txt-logo.png" width="400"> </a>
         </div>
         <nav>
             <ul class="topnav">
